[package]
name = "j1939"
version = "0.1.33"
authors = ["Laixer Equipment B.V. <info@laixer.com>"]
edition = "2021"
repository = "https://github.com/Laixer/J1939"
description = """
SAE J1939 is a set of standards that define how ECUs communicate via the CAN bus in heavy-duty vehicles.
"""
categories = ["no-std", "embedded", "parsing"]
keywords = [
    "can",
    "j1939",
    "sae-j1939",
    "can-bus",
    "network"
]
license = "GPL-3.0"

[features]
default = ["chrono"]
chrono = ["dep:chrono"]

[dependencies]
chrono = { version = "0.4.38", default-features = false, optional = true }
